5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4348/executions/1771_1583.log
== TEST (2019-05-28 10:20:11) 
-- CODE:
v = input("ata:")
t = 0 
n = len(v)
a = ""
while (t<n):
	if (n)
		a=a + v[t]+v[t+1]+v[t+2]+
		t = t +3
	else:
		a = a + v[t]+v[t+1]+v[t+2]
		t =t+3
print
-- ERROR:
File "XXXX", line 6
    if (n)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:20:33) 
-- CODE:
v = input("ata:")
t = 0 
n = len(v)
a = ""
while (t<n):
	if (n):
		a=a + v[t]+v[t+1]+v[t+2]+
		t = t +3
	else:
		a = a + v[t]+v[t+1]+v[t+2]
		t =t+3
print
-- ERROR:
File "XXXX", line 7
    a=a + v[t]+v[t+1]+v[t+2]+
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:21:16) 
-- CODE:
v = input("ata:")
t = 0 
n = len(v)
a = ""
while (t<n):
	if (n):
		a=a + v[t]+v[t+1]+v[t+2]
		t = t +3
	else:
		a = a + v[t]+v[t+1]+v[t+2]
		t =t+3
print
-- ERROR:
File "XXXX", line 7
    a=a + v[t]+v[t+1]+v[t+2]+
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:38:41) 
-- CODE:
v = input("ata:")
t = 0 
n = len(v)
a = ""
while (t<n):
	if (n):
		a=a + v[t]+v[t+1]+v[t+2]
		t = t +3
	else:
		a = a + v[t]+v[t+1]+v[t+2]
		t =t+3
print(n)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:39:07) 
-- CODE:
v = input("ata:")
t = 0 
n = len(v)
a = ""
while (t<n):
	if (n):
		a=a + v[t]+v[t+1]+v[t+2]
		t = t +3
	else:
		a = a + v[t]+v[t+1]+v[t+2]
		t =t+3
print(n)
-- EXECUTION TIME:
0.198919
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
3
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
21
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:39:18) 
-- CODE:
v = input("ata:")
t = 0 
n = len(v)
a = ""
while (t<n):
	if (n):
		a=a + v[t]+v[t+1]+v[t+2]
		t = t +3
	else:
		a = a + v[t]+v[t+1]+v[t+2]
		t =t+3
print(t)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:39:34) 
-- CODE:
v = input("ata:")
t = 0 
n = len(v)
a = ""
while (t<n):
	if (n):
		a=a + v[t]+v[t+1]+v[t+2]
		t = t +3
	else:
		a = a + v[t]+v[t+1]+v[t+2]
		t =t+3
print(a)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:39:48) 
-- CODE:
v = input("ata:")
t = 0 
n = len(v)
a = ""
while (t<n):
	if (n):
		a=a + v[t]+v[t+1]+v[t+2]
		t = t +3
	else:
		a = a + v[t]+v[t+1]+v[t+2]
		t =t+3
print(a)
-- EXECUTION TIME:
0.14339
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123456789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987654321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:41:26) 
-- CODE:
v = input("ata:")
t = 0 
n = len(v)
a = ""
while (t<n):
	if (n):
		a=a + v[t]+v[t+1]+v[t+2]
		t = t +3
	else:
		a = a + v[t]+v[t+1]+v[t+2]
		t =t+3
print(t)
print(a)

-- OUTPUT:
3
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:41:39) 
-- CODE:
v = input("ata:")
t = 0 
n = len(v)
a = ""
while (t<n):
	if (n):
		a=a + v[t]+v[t+1]+v[t+2]
		t = t +3
	else:
		a = a + v[t]+v[t+1]+v[t+2]
		t =t+3
print(t)
print(a)

-- EXECUTION TIME:
0.185583
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
3
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
21
123456789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
9
987654321
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:42:19) 
-- CODE:
v = input("ata:")
t = 0 
n = len(v)
a = "."
while (t<n):
	if (n):
		a=a + v[t]+v[t+1]+v[t+2]
		t = t +3
	else:
		a = a + v[t]+v[t+1]+v[t+2]
		t =t+3
print(a)

-- OUTPUT:
.123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:42:34) 
-- CODE:
v = input("ata:")
t = 0 
n = len(v)
a = ""
while (t<n):
	if (n):
		a=a + v[t]+v[t+1]+v[t+2]
		t = t +3
	else:
		a = a + v[t]+v[t+1]+v[t+2]
		t =t+3
print(a)

-- EXECUTION TIME:
0.290553
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123456789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987654321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:58:10) 
-- CODE:
from numpy import *
v = input("numero: ")
t = 0 
n = len(v)
a = ""
while (t<n):
	if (n):
		a=a + v[t]+v[t+1]+v[t+2]
		t = t +3
	else:
		a = a + v[t]+v[t+1]+v[t+2]
		t =t+3
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
